Fix double scrollbar issue

--- a/src/components/EventsHistory/EventsHistoryTable.module.css
+++ b/src/components/EventsHistory/EventsHistoryTable.module.css
@@ -16,7 +16,7 @@
     text-align: left;
     border: none;
     flex: 0 0 8rem;
-    height: 4rem;
+    height: 3rem;
     display: flex;
     align-items: center;
 
