--- a/src/style.css
+++ b/src/style.css
@@ -102,7 +102,7 @@
   font-weight: 500;
   font-style: normal;
   overflow-x: hidden;
-  overflow-y: auto;
+  overflow-y: hidden;
 }
 
 .menu-open {
@@ -165,4 +165,15 @@ custom-icon {
   display: inline-block;
   width: 1.5em;
   height: 1.5em;
+}
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  border: 0;
 }
